remove personal information

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@ Author's Address
    Piazzale Romano Guardini 1
    Verona, 37138
 
-   Phone: ***REMOVED***
+   Phone: *redacted*
 
-   EMail: ***REMOVED***
+   EMail: *redacted*
 </pre></div></body></html>
